--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "𝘼𝙍𝙄𝙀𝙎 𝙭 𝙎𝙋𝘼𝙈",
+  "name": "𝙭𝙭𝙭 𝙎𝙋𝘼𝙈",
   "description": "𝘼 𝙋𝙊𝙒𝙀𝙍𝙁𝙐𝙇𝙇 𝘼𝙉𝘿 𝙁𝘼𝙎𝙏 𝙎𝙋𝘼𝙈 𝘽𝙊𝙏 𝘽𝙔 @BlackStorm_owner.",
   "logo": "https://telegra.ph/file/7a0d3f30fa591a61f0900.png",
   "keywords": [
